<resources>
    <string name="app_name">TemiTestAppl</string>
    <string name="hello_my_name_is_temi">Hello, my name is Temi!</string>
    <string name="שלום">שלום, אני תמי, במה אוכל לעזור לך היום ?</string>
    <string name="שלומך">אני מצויין, מה שלומך?</string>
    <string name="הצילו">אני מבינה שאתה זקוק לעזרה, למי להתקשר?</string>
    <string name="finishConversation">אין בעיה</string>
    <string name="שגיאה">אני לא מוצאת את מי שביקשת, האם יש מישהו אחר אליו תרצה להתקשר?</string>
    <string name="other">סליחה, אני לא מבינה מה אמרת. אתה יכול לנסות שוב ?</string>
    <string name="nameSpeech">\"בסדר. מתקשרת ל \"</string>
    <string name="multiplyNames">מצאתי יותר מתוצאה אחת תוסיף שם משפחה בבקשהץ. למי להתקשר?</string>
    <string name="pharmacy_queue">Pharmacy queue</string>
    <string name="doctor_queue">Doctor queue</string>
    <string name="order_new_queue">Order new queue</string>
    <string name="take_the_questionnaire">Take the questionnaire</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_app">Quiz app!</string>
    <string name="e_g_john">e. g. John</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="back">Back</string>
    <string name="face_recognition">Face recognition</string>
    <string name="please_enter_your_id">Please enter your ID</string>
    <string name="your_id_number">Your ID number</string>
    <string name="your_name">Your name</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="save_to_data_base">Save to data base</string>
    <string name="save_to_camera_folder">Save to camera folder</string>
    <string name="register_picture_to_data_base">Register picture to Data Base</string>
    <string name="to_allow_all_permission">To allow all permission</string>
    <string name="find_doctor">Find doctor</string>
    <string name="house_m_d">House m.d.</string>
    <string name="find">Find</string>
    <string name="play_movie">Play movie</string>
    <string name="back_to_main_menu">Back to main menu</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="before_alarm">לקוחות שימו לב, הופעלה אזעקת צבע אדום</string>
    <string name="after_alarm">נא לגשת למרחב המוגן הנמצא ליד המעלית</string>
    <string name="before_call">בעלי מוגבלות אשר אינם יכולים להגיע למרחב המוגן, מתבקשים להגיע לחדר 9, החדר הכי מוגן שיש</string>
</resources>