<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginTop="500dp">

    <Button
        android:id="@+id/button_pharmacy"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/pharmacy_queue"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_doctor"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:text="@string/doctor_queue"
        android:layout_margin="10dp"
        android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_questionnaire"
            android:layout_width="10dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/take_the_questionnaire"
            android:layout_margin="10dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/button_face_recognition"
            android:layout_width="10dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/face_recognition"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_find_doctor"
            android:layout_width="10dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/find_doctor"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_play_movie"
            android:layout_width="10dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/play_movie"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>