<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FaceRecognitionActivity"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_register_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_picture_to_data_base" />

    <Button
        android:id="@+id/button_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_allow_all_permission" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>