<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    tools:context=".RegisterUserActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="445dp"
        android:layout_height="665dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/please_enter_your_id"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_id_number"
                    android:inputType="number"
                    android:maxLength="9"
                    android:textColor="@color/grey"
                    android:textColorHint="#7A8089" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_name"
                    android:inputType="text"
                    android:textColor="@color/grey"
                    android:textColorHint="#7A8089" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_take_a_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_a_picture" />

            <Button
                android:id="@+id/btn_save_to_data_base_folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_to_data_base" />

            <ImageView
                android:id="@+id/iw_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>