<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_bg"
    tools:context=".FindDoctorActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp">


        <Button
            android:id="@+id/button_doctor_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:text="Doctor one" />

        <Button
            android:id="@+id/button_doctor_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:text="Doctor two" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="413dp"
        android:layout_height="286dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="Please enter doctor's name"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_doctor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_m_d"
                    android:inputType="textCapWords"
                    android:textColor="@color/grey"
                    android:textColorHint="#7A8089" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_on_primary"
                android:text="@string/find"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>